--- a/department-service.properties
+++ b/department-service.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/department_db
-spring.datasource.username=sreekanth
+spring.datasource.username=root
 spring.datasource.password=sreekanth
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
